[package]
name = "beancount-language-server"
version = "0.1.0"
edition = "2018"

[dependencies]
tower-lsp = "0"
tokio = { version = "1", features = ["io-std", "fs", "macros", "rt-multi-thread"] }
thiserror = "1"
tree-sitter = "0.19"
tree-sitter-beancount = { git = "https://github.com/polarmutex/tree-sitter-beancount" }
trie-rs = "0"

[dev-dependencies]
tempfile = "3"
