[package]
name = "beancount-language-server"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "1"
tower-lsp = "0"
tokio = { version = "1", features = ["io-std", "fs", "macros", "process", "rt-multi-thread"] }
thiserror = "1"
tree-sitter = "0.19"
tree-sitter-beancount = { git = "https://github.com/polarmutex/tree-sitter-beancount" }

[dev-dependencies]
tempfile = "3"
